--- a/_BACKEND/.env
+++ b/_BACKEND/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://sekersezer09:n1UOT7nibvWRBsId@cluster0.mnbvfeb.mongodb.net/
+MONGO_URL=mongodb+srv://sekersezer:DD2rAcjXOuc2Dwpr@cluster0.mnbvfeb.mongodb.net/
