--- a/_BACKEND/package.json
+++ b/_BACKEND/package.json
@@ -1,7 +1,6 @@
 {
   "name": "kalorihesapla",
   "version": "1.0.0",
-  "description": "",
   "main": "backend/index.js",
   "scripts": {
     "dev": "nodemon backend/index.js"
@@ -11,14 +10,17 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.1"
+    "mongoose": "^8.14.1",
+    "validator": "^13.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
-  }
+  },
+  "description": ""
 }
