user auth işlemleri yapıldı #2

--- a/_BACKEND/.env
+++ b/_BACKEND/.env
@@ -1,1 +1,2 @@
-MONGO_URL=mongodb+srv://sekersezer09:n1UOT7nibvWRBsId@cluster0.mnbvfeb.mongodb.net/
+MONGO_URL=mongodb+srv://sezerskr:Sg5wDbeT7rMgKjdX@cluster0.mnbvfeb.mongodb.net/
+JWT_SECRET=supergizlianahatar123
